重构: 创建合理的项目结构并添加基础类
1. 创建文件夹结构：
   - Pages: 存放页面
   - Controls: 存放自定义控件
   - Models: 存放数据模型
   - ViewModels: 存放视图模型
   - Helpers: 存放工具类

2. 添加基础类：
   - TodoItem 模型
   - TodoViewModel
   - StorageHelper
   - TodoListControl 自定义控件

--- a/TodoList.csproj
+++ b/TodoList.csproj
@@ -26,13 +26,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <None Remove="Controls\TodoListControl.xaml" />
+    <None Remove="Pages\MainWindow.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Controls\TodoListControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Pages\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
